- Improved deadline field layout (more descriptive text) - Fixed job card autowrap issue - Fixed job details page autowrap issue - Fixed job details componen&page size align issue

--- a/web/src/app/components/JobCardCarousel/JobCard.module.css
+++ b/web/src/app/components/JobCardCarousel/JobCard.module.css
@@ -1,4 +1,15 @@
 .text {
   position: relative;
   color: var(--mantine-color-customWhite-1);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  /* same number as your lineClamp prop */
+  -webkit-box-orient: vertical;
+  word-break: break-word;
+  /* allows breaking long words */
+  white-space: normal;
+  /* ensures wrapping is allowed */
 }
